--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 /* Layout */
-html,
+
 body {
   margin: 0;
   height: 100%;
@@ -16,7 +16,7 @@ code {
     monospace;
 }
 
-#root {
+/* #root {
   max-width: 1250px;
   min-height: 100vh;
   margin: auto;
@@ -49,10 +49,10 @@ button {
   font-weight: 500;
   cursor: pointer;
   padding: 0 16px;
-}
+}  */
 
 /* Blocks */
-main {
+/* main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -101,13 +101,13 @@ article > div > p:nth-of-type(1) {
 article > div > p:nth-of-type(2) {
   color: gray;
   margin-bottom: 20px;
-}
+} */
 
 /* article > div > button {
   margin-top: auto;
 } */
 
-aside {
+/* aside {
   position: sticky;
   bottom: 0;
   margin: auto;
@@ -116,4 +116,4 @@ aside {
 
 aside > button {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
+} */
